--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
       </li>
     </ul>
   </div>
+  
+  <!-- load scripts -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
